--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="bottombar_height">60dp</dimen>
+
+    <dimen name="button_spacer_width">8dp</dimen>
+    <dimen name="button_spacer_height">52dp</dimen>
 </resources>
