--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Colors for defining the app theme -->
     <color name="colorPrimary">#8bc34a</color>
     <color name="colorPrimaryDark">#558b2f</color>
     <color name="colorAccent">#b388ff</color>
+
+    <!--   Colors for the orbital body displays   -->
+    <color name="colorMohoDisplay">#FA7850</color>
+    <color name="colorEveDisplay">#8214A0</color>
+    <color name="colorKerbinDisplay">#005AC8</color>
+    <color name="colorDunaDisplay">#AA0A3C</color>
+    <color name="colorDresDisplay">#A0FA82</color>
+    <color name="colorJoolDisplay">#0AB45A</color>
+    <color name="colorEelooDisplay">#14D2DC</color>
+    <color name="colorKerbolDisplay">#F0F032</color>
 </resources>
