Adds test of callback methods into fragments and main activity, allowing the fragments to display the results of the orbital maneuver calculations onto text fields.

--- a/app/src/main/res/layout/fragment_phase_display.xml
+++ b/app/src/main/res/layout/fragment_phase_display.xml
@@ -14,5 +14,5 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textSize="64sp"
-        android:id="@+id/textView" />
+        android:id="@+id/PhaseTestDisplay" />
 </RelativeLayout>
