Adds dimensions and colors used by the Phase and Eject Display Canvases in drawing the graphical display of the orbital maneuver properties.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,10 @@
     <color name="colorJoolDisplay">#0AB45A</color>
     <color name="colorEelooDisplay">#14D2DC</color>
     <color name="colorKerbolDisplay">#F0F032</color>
+
+    <!--    Colors for displaying orbit info    -->
+    <color name="colorAngleLines">#FA78FA</color>
+    <color name="colorOrbitCircles">#cccccc</color>
+    <color name="colorArrowDisplay">#999999</color>
+    <color name="colorShipDisplay">#4c4c4c</color>
 </resources>
