--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,10 @@
 
     <dimen name="button_spacer_width">8dp</dimen>
     <dimen name="button_spacer_height">52dp</dimen>
+
+    <!-- Dimensions used on orbit display canvases -->
+    <integer name="path_width">2</integer>
+    <integer name="planet_width">15</integer>
+    <integer name="triangle_width">15</integer>
+    <integer name="text_size">15</integer>
 </resources>
