Adds PhaseDisplayCanvas class, and adds PhaseDisplayCanvas element to the phase display fragment view.
Application runs at this point, but without functionality for the phase display fragment view.

--- a/app/src/main/res/layout/fragment_phase_display.xml
+++ b/app/src/main/res/layout/fragment_phase_display.xml
@@ -7,12 +7,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:text="@string/phase_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="64sp"
-        android:id="@+id/PhaseTestDisplay" />
+    <com.qwyxand.ksporbitalkalculator.viewfragments.PhaseDisplayCanvas
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/PhaseAngleDisplayCanvas"/>
 </RelativeLayout>
